Simplify boolean constructor call